--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -268,8 +268,8 @@
                 {{ action.label }}
               </button>
             </div>
-          </div> 
-        </div> 
+          </div>
+        </div>
       </div> -->
 
       <div class="card-content">
@@ -303,6 +303,7 @@
 
           <div class="card-info">
             <h3 class="card-title">{{ item.name || item.title || "عنصر" }}</h3>
+            <hr>
             <p class="card-description">{{ item.description || "" }}</p>
 
             <div class="card-details">
@@ -327,6 +328,9 @@
                   </span>
                   <span *ngIf="!column.type || column.type === 'text'">
                     {{ getCellValue(item, column) }}
+                  </span>
+                   <span *ngIf="column.type === 'date'" class="date-value">
+                    {{ formatDate(getCellValue(item, column)) }}
                   </span>
                 </span>
               </div>
