--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -52,7 +52,7 @@
       </div>
       <div class="btn-shine"></div>
     </button>
-     <!-- Filters Panel -->
+    <!-- Filters Panel -->
     <div class="filters-panel" [class.visible]="showFilters">
       <div class="filters-overlay" (click)="closeFiltersPanel()"></div>
       <div class="filters-container">
@@ -68,7 +68,11 @@
             </div>
           </div>
           <div class="header-actions">
-            <button class="clear-all-btn" (click)="clearAllFilters()" *ngIf="hasActiveFilters()">
+            <button
+              class="clear-all-btn"
+              (click)="clearAllFilters()"
+              *ngIf="hasActiveFilters()"
+            >
               <i class="material-icons">clear_all</i>
               مسح الكل
             </button>
@@ -105,14 +109,19 @@
                   <i class="material-icons">category</i>
                 </div>
                 <span class="tag-label">الفئة:</span>
-                <span class="tag-value">{{ getCategoryName(categoryFilter) }}</span>
+                <span class="tag-value">{{
+                  getCategoryName(categoryFilter)
+                }}</span>
                 <button class="tag-remove" (click)="onCategoryFilterChange('')">
                   <i class="material-icons">close</i>
                 </button>
               </div>
 
               <!-- Price Filter -->
-              <div class="filter-tag" *ngIf="priceFilter.min || priceFilter.max">
+              <div
+                class="filter-tag"
+                *ngIf="priceFilter.min || priceFilter.max"
+              >
                 <div class="tag-icon">
                   <i class="material-icons">attach_money</i>
                 </div>
@@ -124,7 +133,7 @@
               </div>
 
               <!-- Attribute Filters -->
-              <div 
+              <div
                 *ngFor="let attr of getActiveAttributeFilters()"
                 class="filter-tag"
               >
@@ -132,8 +141,11 @@
                   <i class="material-icons">tune</i>
                 </div>
                 <span class="tag-label">{{ attr.key }}:</span>
-                <span class="tag-value">{{ attr.values.join(', ') }}</span>
-                <button class="tag-remove" (click)="clearAttributeFilter(attr.key)">
+                <span class="tag-value">{{ attr.values.join(", ") }}</span>
+                <button
+                  class="tag-remove"
+                  (click)="clearAttributeFilter(attr.key)"
+                >
                   <i class="material-icons">close</i>
                 </button>
               </div>
@@ -150,22 +162,41 @@
                   <i class="material-icons">inventory</i>
                   حالة المنتج
                 </label>
-                <div class="searchable-select" [class.open]="activeDropdown === 'status'">
-                  <div class="select-trigger" (click)="toggleDropdown('status')">
-                    <span class="select-value" *ngIf="statusFilter; else statusPlaceholder">
-                      <div class="status-indicator" [class]="getStatusClass(statusFilter)"></div>
+                <div
+                  class="searchable-select"
+                  [class.open]="activeDropdown === 'status'"
+                >
+                  <div
+                    class="select-trigger"
+                    (click)="toggleDropdown('status')"
+                  >
+                    <span
+                      class="select-value"
+                      *ngIf="statusFilter; else statusPlaceholder"
+                    >
+                      <div
+                        class="status-indicator"
+                        [class]="getStatusClass(statusFilter)"
+                      ></div>
                       {{ statusFilter }}
                     </span>
                     <ng-template #statusPlaceholder>
                       <span class="select-placeholder">اختر الحالة</span>
                     </ng-template>
-                    <i class="material-icons expand-icon" [class.rotated]="activeDropdown === 'status'">expand_more</i>
+                    <i
+                      class="material-icons expand-icon"
+                      [class.rotated]="activeDropdown === 'status'"
+                      >expand_more</i
+                    >
                   </div>
-                  
-                  <div class="select-dropdown" *ngIf="activeDropdown === 'status'">
+
+                  <div
+                    class="select-dropdown"
+                    *ngIf="activeDropdown === 'status'"
+                  >
                     <div class="dropdown-search">
-                      <input 
-                        type="text" 
+                      <input
+                        type="text"
                         placeholder="البحث في الحالات..."
                         [(ngModel)]="statusSearchTerm"
                         class="search-input"
@@ -173,10 +204,10 @@
                       />
                       <i class="material-icons">search</i>
                     </div>
-                    
+
                     <div class="dropdown-options">
-                      <div 
-                        class="dropdown-option" 
+                      <div
+                        class="dropdown-option"
                         [class.selected]="statusFilter === ''"
                         (click)="selectStatus('')"
                       >
@@ -186,15 +217,18 @@
                         </div>
                         <!-- <span class="option-count">{{ getTotalProductsCount() }}</span> -->
                       </div>
-                      
-                      <div 
+
+                      <div
                         *ngFor="let status of getFilteredStatuses()"
-                        class="dropdown-option" 
+                        class="dropdown-option"
                         [class.selected]="statusFilter === status"
                         (click)="selectStatus(status)"
                       >
                         <div class="option-content">
-                          <div class="status-indicator" [class]="getStatusClass(status)"></div>
+                          <div
+                            class="status-indicator"
+                            [class]="getStatusClass(status)"
+                          ></div>
                           <span>{{ status }}</span>
                         </div>
                         <!-- <span class="option-count">{{ getStatusCount(status) }}</span> -->
@@ -210,21 +244,37 @@
                   <i class="material-icons">category</i>
                   فئة المنتج
                 </label>
-                <div class="searchable-select" [class.open]="activeDropdown === 'category'">
-                  <div class="select-trigger" (click)="toggleDropdown('category')">
-                    <span class="select-value" *ngIf="categoryFilter; else categoryPlaceholder">
+                <div
+                  class="searchable-select"
+                  [class.open]="activeDropdown === 'category'"
+                >
+                  <div
+                    class="select-trigger"
+                    (click)="toggleDropdown('category')"
+                  >
+                    <span
+                      class="select-value"
+                      *ngIf="categoryFilter; else categoryPlaceholder"
+                    >
                       {{ getCategoryName(categoryFilter) }}
                     </span>
                     <ng-template #categoryPlaceholder>
                       <span class="select-placeholder">اختر الفئة</span>
                     </ng-template>
-                    <i class="material-icons expand-icon" [class.rotated]="activeDropdown === 'category'">expand_more</i>
+                    <i
+                      class="material-icons expand-icon"
+                      [class.rotated]="activeDropdown === 'category'"
+                      >expand_more</i
+                    >
                   </div>
-                  
-                  <div class="select-dropdown" *ngIf="activeDropdown === 'category'">
+
+                  <div
+                    class="select-dropdown"
+                    *ngIf="activeDropdown === 'category'"
+                  >
                     <div class="dropdown-search">
-                      <input 
-                        type="text" 
+                      <input
+                        type="text"
                         placeholder="البحث في الفئات..."
                         [(ngModel)]="categorySearchTerm"
                         class="search-input"
@@ -232,10 +282,10 @@
                       />
                       <i class="material-icons">search</i>
                     </div>
-                    
+
                     <div class="dropdown-options">
-                      <div 
-                        class="dropdown-option" 
+                      <div
+                        class="dropdown-option"
                         [class.selected]="categoryFilter === ''"
                         (click)="selectCategory('')"
                       >
@@ -245,18 +295,29 @@
                         </div>
                         <!-- <span class="option-count">{{ getTotalProductsCount() }}</span> -->
                       </div>
-                      
-                      <div 
+
+                      <div
                         *ngFor="let category of getFilteredCategories()"
-                        class="dropdown-option" 
-                        [class.selected]="categoryFilter === category.id.toString()"
+                        class="dropdown-option"
+                        [class.selected]="
+                          categoryFilter === category.id.toString()
+                        "
                         (click)="selectCategory(category.id.toString())"
                       >
                         <div class="option-content">
-                          <div class="category-image" *ngIf="category.imageThumbnailUrl">
-                            <img [src]="category.imageThumbnailUrl" [alt]="category.name" />
+                          <div
+                            class="category-image"
+                            *ngIf="category.imageThumbnailURL"
+                          >
+                            <img
+                              [src]="category.imageThumbnailURL"
+                              alt="category.name"
+                            />
                           </div>
-                          <div class="category-placeholder" *ngIf="!category.imageThumbnailUrl">
+                          <div
+                            class="category-placeholder"
+                            *ngIf="!category.imageThumbnailURL"
+                          >
                             <i class="material-icons">category</i>
                           </div>
                           <span>{{ category.name }}</span>
@@ -278,8 +339,8 @@
                 </label>
                 <div class="price-inputs">
                   <div class="price-input-group">
-                    <input 
-                      type="number" 
+                    <input
+                      type="number"
                       [(ngModel)]="priceFilter.min"
                       (ngModelChange)="onPriceFilterChange()"
                       placeholder="السعر الأدنى"
@@ -291,8 +352,8 @@
                     <i class="material-icons">remove</i>
                   </div>
                   <div class="price-input-group">
-                    <input 
-                      type="number" 
+                    <input
+                      type="number"
                       [(ngModel)]="priceFilter.max"
                       (ngModelChange)="onPriceFilterChange()"
                       placeholder="السعر الأعلى"
@@ -301,9 +362,9 @@
                     />
                   </div>
                 </div>
-                
+
                 <div class="price-presets">
-                  <button 
+                  <button
                     *ngFor="let preset of pricePresets"
                     class="price-preset-btn"
                     [class.active]="isPricePresetActive(preset)"
@@ -316,51 +377,109 @@
             </div>
 
             <!-- Row 3: Dynamic Attribute Filters -->
-            <div class="filter-row attribute-filters-row" *ngIf="availableAttributes.length > 0">
-              <div class="filter-field attribute-field" *ngFor="let attribute of availableAttributes">
+            <div
+              class="filter-row attribute-filters-row"
+              *ngIf="availableAttributes.length > 0"
+            >
+              <div
+                class="filter-field attribute-field"
+                *ngFor="let attribute of availableAttributes"
+              >
                 <label class="filter-label">
                   <i class="material-icons">tune</i>
                   {{ attribute.key }}
                 </label>
-                <div class="searchable-select" [class.open]="activeDropdown === 'attr_' + attribute.key">
-                  <div class="select-trigger" (click)="toggleDropdown('attr_' + attribute.key)">
-                    <span class="select-value" *ngIf="attributeFilters[attribute.key]?.length; else attrPlaceholder">
-                      {{ attributeFilters[attribute.key].length > 1 ? 
-                          attributeFilters[attribute.key].length + ' قيم محددة' : 
-                          attributeFilters[attribute.key][0] }}
+                <div
+                  class="searchable-select"
+                  [class.open]="activeDropdown === 'attr_' + attribute.key"
+                >
+                  <div
+                    class="select-trigger"
+                    (click)="toggleDropdown('attr_' + attribute.key)"
+                  >
+                    <span
+                      class="select-value"
+                      *ngIf="
+                        attributeFilters[attribute.key]?.length;
+                        else attrPlaceholder
+                      "
+                    >
+                      {{
+                        attributeFilters[attribute.key].length > 1
+                          ? attributeFilters[attribute.key].length +
+                            " قيم محددة"
+                          : attributeFilters[attribute.key][0]
+                      }}
                     </span>
                     <ng-template #attrPlaceholder>
                       <span class="select-placeholder">اختر القيمة</span>
                     </ng-template>
-                    <i class="material-icons expand-icon" [class.rotated]="activeDropdown === 'attr_' + attribute.key">expand_more</i>
+                    <i
+                      class="material-icons expand-icon"
+                      [class.rotated]="
+                        activeDropdown === 'attr_' + attribute.key
+                      "
+                      >expand_more</i
+                    >
                   </div>
-                  
-                  <div class="select-dropdown" *ngIf="activeDropdown === 'attr_' + attribute.key">
+
+                  <div
+                    class="select-dropdown"
+                    *ngIf="activeDropdown === 'attr_' + attribute.key"
+                  >
                     <div class="dropdown-search">
-                      <input 
-                        type="text" 
+                      <input
+                        type="text"
                         [placeholder]="'البحث في ' + attribute.key + '...'"
                         [(ngModel)]="attributeSearchTerms[attribute.key]"
                         class="search-input"
                         (click)="$event.stopPropagation()"
+                        [title]="'البحث في ' + attribute.key + '...'"
+                        placeholder="أدخل قيمة البحث"
+                        title="حقل البحث عن قيمة السمة"
                       />
                       <i class="material-icons">search</i>
                     </div>
-                    
+
                     <div class="dropdown-options">
-                      <div 
-                        *ngFor="let value of getFilteredAttributeValues(attribute)"
-                        class="dropdown-option attribute-option" 
-                        [class.selected]="isAttributeValueSelected(attribute.key, value.value)"
-                        (click)="toggleAttributeValue(attribute.key, value.value)"
+                      <div
+                        *ngFor="
+                          let value of getFilteredAttributeValues(attribute)
+                        "
+                        class="dropdown-option attribute-option"
+                        [class.selected]="
+                          isAttributeValueSelected(attribute.key, value.value)
+                        "
+                        (click)="
+                          toggleAttributeValue(attribute.key, value.value)
+                        "
                       >
                         <div class="option-content">
                           <div class="option-checkbox">
-                            <input 
-                              type="checkbox" 
-                              [checked]="isAttributeValueSelected(attribute.key, value.value)"
+                            <input
+                              type="checkbox"
+                              [checked]="
+                                isAttributeValueSelected(
+                                  attribute.key,
+                                  value.value
+                                )
+                              "
                               (click)="$event.stopPropagation()"
-                              (change)="toggleAttributeValue(attribute.key, value.value)"
+                              (change)="
+                                toggleAttributeValue(attribute.key, value.value)
+                              "
+                              title="تحديد القيمة {{ value.value }} لـ {{
+                                attribute.key
+                              }}"
+                              placeholder="تحديد القيمة {{ value.value }} لـ {{
+                                attribute.key
+                              }}"
+                              [attr.aria-label]="
+                                'تحديد القيمة ' +
+                                value.value +
+                                ' لـ ' +
+                                attribute.key
+                              "
                             />
                           </div>
                           <span>{{ value.value }}</span>
@@ -368,10 +487,16 @@
                         <!-- <span class="option-count">{{ value.count }}</span> -->
                       </div>
                     </div>
-                    
+
                     <!-- Clear attribute button -->
-                    <div class="dropdown-footer" *ngIf="attributeFilters[attribute.key]?.length">
-                      <button class="clear-attribute-btn" (click)="clearAttributeFilter(attribute.key)">
+                    <div
+                      class="dropdown-footer"
+                      *ngIf="attributeFilters[attribute.key]?.length"
+                    >
+                      <button
+                        class="clear-attribute-btn"
+                        (click)="clearAttributeFilter(attribute.key)"
+                      >
                         <i class="material-icons">clear</i>
                         مسح التحديد
                       </button>
@@ -418,6 +543,7 @@
   *ngIf="isDetailsModalOpen"
   [isOpen]="isDetailsModalOpen"
   [product]="selectedProduct"
+  [categories]="categories"
   (close)="closeDetailsModal()"
   (edit)="openEditModalFromDetails($event)"
   (delete)="openDeleteConfirmFromDetails($event)"
